2011-08-15  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclBasic.c: [Bug 3390272] Leak of [info script] value.

2011-08-15  Jan Nijtmans  <nijtmans@users.sf.net>

	* win/tcl.m4:       [Bug 3388350] mingw64 compiler warnings
	* win/configure.in
	* win/configure
	* win/tclMtherr.c
	* win/tclWinPort.h
	* win/tclWinChan.c
	* win/tclWinDde.c
	* win/tclWinFCmd.c
	* win/tclWinPipe.c
	* win/tclWinReg.c
	* win/tclWinSerial.c
	* win/tclWinSock.c
	* win/tclWinTest.c
	* win/tclWinTime.c
	* generic/tclPosixStr.c
	* unix/tcl.m4:      Quoting and AC_DEFINE fixes (All backported from
	* unix/configure    Tcl 8.5

2011-07-21  Jan Nijtmans  <nijtmans@users.sf.net>

	* win/tclWinPort.h: [Bug 3372130] Fix hypot math function with MSVC10

2011-07-15  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclCompile.c: Avoid segfaults when RecordByteCodeStats()
	is called in a deleted interp.

2011-07-13  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclProc.c:	[Bug 3366265] Buffer for storing the command
	* tests/indexObj.test:	name formatted as a list element is allocated
	* tests/proc.test:	one byte too small, causing buffer overflow
	when the proc with the empty name raises a "wrong num args" error.

2011-07-03  Donal K. Fellows  <dkf@users.sf.net>

	* doc/FileSystem.3: Corrected statements about ctime field of 'struct
	stat'; that was always the time of the last metadata change, not the
	time of creation.

2011-06-22  Andreas Kupries  <andreask@activestate.com>

	* library/platform/pkgIndex.tcl: Updated to platform 1.0.10. Added
	* library/platform/platform.tcl: handling of the DEB_HOST_MULTIARCH
	location change for libc.

2011-05-07  Miguel Sofer  <msofer@users.sf.net>

	* generic/tclInt.h: fix USE_TCLALLOC so that it can be enabled
	* unix/Makefile.in: without editing the Makefile

2011-04-21  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclCompile.c:		Make sure SetFooFromAny routines react
	* generic/tclIndexObj.c:	reasonably when passed a NULL interp.